# hmmgenefinder

Report/: DBDM4.docx
dbdm4/: CfgParser.cpp  CfgParser.h  DNAUtil.cpp  DNAUtil.h  DebugTrace.cpp  Genome.cpp  Genome.h  HMM.cpp  HMM.h  HMM_Intergenic.cpp  HMM_Intergenic_Dumb.cpp  SimpleGenomicTest.cpp  SimpleGenomicTest.h  Utils.cpp  Utils.h  codon_stats_report_genic.m  dbdm4.cpp  dbdm4.sln  dbdm4.vcproj  math.h  mvec.h  start_codon_stats_check.m  stdafx.cpp  stdafx.h  stddefs.h  test_hmm.cpp
ghmm-0.7.0/: AUTHORS  COPYRIGHT.txt  Makefile.am  Makefile.in  README  README.Win  ToDo  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  win_config.h
ghmm-0.7.0/doc/: Makefile.am  Makefile.in  docu.dxx.in
ghmm-0.7.0/ghmm/: Makefile.am  Makefile.in  cluster.c  cluster.h  const.h  discrime.c  discrime.h  foba.c  foba.h  gauss_tail.c  gauss_tail.h  ghmm.h  gradescent.c  gradescent.h  internal.h  kbest.c  kbest.h  kbestbasics.c  kbestbasics.h  linkedlist.c  linkedlist.h  matrix.c  matrix.h  mes.c  mes.h  model.c  model.h  modelutil.c  modelutil.h  mprintf.c  mprintf.h  pmodel.c  pmodel.h  psequence.c  psequence.h  pviterbi.c  pviterbi.h  pviterbi_propagate.c  pviterbi_propagate.h  randvar.c  (+36 more)
ghmm-0.7.0/tests/: Makefile.am  Makefile.in  chmm.c  coin_toss_test.c  generate_PHI.c  label_higher_order_test.c  root_finder_test.c  sequences_old_format.c  sequences_test.c  shmm_viterbi_test.c  test_gsl_ran_gaussian_tail.c  two_states_three_symbols.c
ghmm-0.7.0/tests/data/: Makefile.am  Makefile.in
ghmm-0.7.0/tools/: Makefile.am  Makefile.in  cluster.c  ghmm-config.in  probdist.c  scluster.c  smix_hmm.c
ghmm-0.7.0/vs9/ghmm/: ghmm.vcproj
ghmm-0.7.0/vs9/ghmms/: ghmms.sln  ghmms.vcproj
matlab/: FilterDNA.m  GenomeCalc.m  GetGenbankFile.m  HMM.m  HMM_Genic.m  HMM_Intergenic.m  HMM_Intergenic_Dumb.m  HMM_Intergenic_Long.m  HMM_Intergenic_Short.m  HMM_Merge.m  ListProteins.m  build_hmm.m  codonFull.csv  codonTest.csv  codonTestGenic.csv  codonTrain.csv  codonTrainGenic.csv  codon_stats_report.m  codon_stats_report_genic.m  genic_sequences.txt  get_bank_file.m  get_statistics.m  get_training_sequences.m  get_training_sequences_genic.m  get_training_sequences_intergenic_long.m  get_training_sequences_intergenic_short.m  intergenic_length_report.m  intergenic_long.cfg  intergenic_short.cfg  load_ecoli.m  long_sequences.txt  my_hmmdecode.m  my_hmmtrain.m  my_hmmviterbi.m  nucleotide_stats_report.m  save_genome.m  save_training_sequences.m  short_sequences.txt  split_contig.m  split_ecoli.m  (+5 more)
matlab/alexey/: build_hmm.m  get_bank_file.m  get_genic_statistics.m  split_ecoli.m
